<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CommentsFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/commentAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/commentTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/StatusBarColor"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:menu="@menu/menu" />

    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:id="@+id/commload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        >

        <androidx.core.widget.ContentLoadingProgressBar
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/headlinesText" />

    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CommentsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentAppBarLayout"
        tools:listitem="@layout/comments_view_holder_layout" />

    <TextView
        android:id="@+id/NoComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noComm"
        android:textColor="@color/headlinesText"
        android:textSize="20sp"
        tools:visibility="invisible"
        android:fontFamily="@font/mabry_pro_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentAppBarLayout" />

    <TextView
        android:id="@+id/ErrorComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errComm"
        android:textColor="@color/headlinesText"
        android:textSize="20sp"
        tools:visibility="invisible"
        android:fontFamily="@font/mabry_pro_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentAppBarLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>