<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_settings.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.fragment.SettingsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarSettings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/StatusBarColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/title_settings"
            app:titleCentered="true"/>

        </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutSettings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/themesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/themesRecyclerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <ImageView
                android:id="@+id/notifIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/switchNotifications"
                android:src="@drawable/ic_notifications"/>


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:defaultValue="true"
                android:key="pref_new_post_notifications"
                android:text="@string/switchTitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/notifIcon"
                app:layout_constraintTop_toBottomOf="@id/notifIcon"
                app:switchMinWidth="60dp"
                app:thumbTint="@color/switch_thumb_selector"
                app:trackTint="@color/switch_track_selector" />


            <TextView
                android:id="@+id/switchDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/headlinesText"
                app:layout_constraintEnd_toEndOf="@id/switchNotifications"
                app:layout_constraintStart_toStartOf="@id/switchNotifications"
                app:layout_constraintTop_toBottomOf="@id/switchNotifications"
                android:text="@string/switchSum"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>